# lab1

./: CMakeLists.txt
spatial/: BasicSpatial.hpp  CMakeLists.txt  Point.h  SpatialBase.h  Validator.h  Validator.inl
tests/: CMakeLists.txt  validation_test.cpp
